<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_community"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_community" />
    <item
        android:id="@+id/nav_device"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_device" />
    <item
        android:id="@+id/nav_member"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_member" />
    <item
        android:id="@+id/nav_mine"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_mine" />
</menu>
